--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "notes",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node backend/server",
-    "server": "nodemon --allow-natives-syntax --es-module-specifier-resolution=node backend/server",
+    "server": "nodemon backend/server",
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
